# log-server

./: .env  .gitignore  ServerDockerfile  WebDockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py  socket_server.py
app/templates/: index.html
log_server/: __init__.py  config.py  logger.py  socket_server.py
notebooks/: demo.ipynb  log_adapter.ipynb  socket_server.py
